[package]
name = "rudis"
version = "0.1.0"
description = "tui for redis"
authors = ["lex <lex@work.cn>"]
license = "MIT"
edition = "2024"

[dependencies]
crossterm = "0.28.1"
ratatui = "0.29.0"
color-eyre = "0.6.3"
tokio = { version = "1.0", features = ["full"] }
redis = { version = "0.24", features = ["tokio-comp"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
log = "0.4"
env_logger = "0.10"
futures = "0.3"
uuid = { version = "1.0", features = ["v4"] }
dirs = "5.0"
base64 = "0.22"
serde_yaml = "0.9"
csv = "1.3"
chrono = { version = "0.4", features = ["serde"] }
regex = "1.10"
arboard = "3.3"
